--- a/calendar/index.html
+++ b/calendar/index.html
@@ -3,10 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="styles.css">
   <title>Calendrier de la Semaine</title>
 </head>
 <body>
+
+  <div class="sidebar">
+    <div class="profile">
+        <div class="profile-img"></div>
+        <img src="../images/cat.png" alt="Image de profil">
+    </div>
+    <div class="menu">
+        <ul>
+            <li><a href="../index.html"><img src="../images/pictos/calendrier.png" alt="Icône calendrier"></a></li>
+            <li><a href="#"><img src="../images/pictos/parametres.png" alt="Icône paramètres"></a></li>
+        </ul>
+    </div>
+</div>
+<div class="second-sidebar">
+    <div class="search-bar">
+        <input type="text" placeholder="Rechercher">
+    </div>
+</div>
 
 <div id="calendar">
   <div id="day-container">
