--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="menu">
         <ul>
-            <li><a href="../index.html"><img src="../images/pictos/calendrier.png" alt="Icône calendrier"></a></li>
+            <li><a href="../index.html"><img src="../images/pictos/accueil.png" alt="Icône calendrier"></a></li>
             <li><a href="#"><img src="../images/pictos/parametres.png" alt="Icône paramètres"></a></li>
         </ul>
     </div>
