--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
         </div>
         <div class="container-wrapper">
+            <div id="heure" class="clock"></div>
             <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter...</button>
             <div id="container">
                 <form id="squareForm">
