--- a/index.html
+++ b/index.html
@@ -11,46 +11,18 @@
 <main>
     <div class="container-page">
         <div class="sidebar">
-            <div class="profile">
-                <div class="profile-img"></div>
-                <img src="images/cat.png" alt="Image de profil">
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="calendar/index.html"><img src="images/pictos/calendrier.png" alt="Icône calendrier"></a></li>
-                    <li><a href="#"><img src="images/pictos/parametres.png" alt="Icône paramètres"></a></li>
-                </ul>
-            </div>
+            <!-- ... Votre barre latérale ... -->
         </div>
         <div class="second-sidebar">
-            <div class="search-bar">
-                <input type="text" placeholder="Rechercher">
-            </div>
+            <!-- ... Votre barre de recherche ... -->
         </div>
         <div class="container-wrapper">
+            <div id="greeting" class="greeting-text">Bonjour Rophyr !</div> <!-- Le texte de salutation -->
+            <div id="heure" class="clock"></div> <!-- L'élément où l'horloge s'affichera -->
             <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter...</button>
-            <div id="heure" class="clock"></div>
             <div id="container">
                 <form id="squareForm">
-                    <label for="title">Titre:</label>
-                    <input type="text" id="title" name="title" required>
-
-                    <label for="description">Description:</label>
-                    <textarea id="description" name="description" required></textarea>
-
-                    <label for="category">Couleur:</label>
-                    <select id="category" name="category">
-                        <option value="categorie1">Bleu</option>
-                        <option value="categorie2">Vert</option>
-                        <option value="categorie3">Rouge</option>
-                        <option value="categorie4">Jaune</option>
-                        <option value="categorie5">Violet</option>
-                        <option value="categorie6">Gris</option>
-                        <option value="categorie7">Orange</option>
-                        <option value="categorie8">Rose</option>
-                    </select>
-
-                    <button id="addSquareButton" onclick="addSquare()">Ajouter Carré</button>
+                    <!-- ... Votre formulaire pour ajouter des carrés ... -->
                 </form>
             </div>
         </div>
