--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         </div>
         <div class="container-wrapper">
             <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter...</button>
-            <div id="heure" class="clock"></div>
+            <div id="greeting" class="greeting-text">Bonjour Rophyr !</div> <!-- Texte de salutation -->
+            <div id="heure" class="clock"></div> <!-- L'élément où l'horloge s'affichera -->
             <div id="container">
                 <form id="squareForm">
                     <label for="title">Titre:</label>
