--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </div>
         <div class="container-wrapper">
             <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter...</button>
-            <div id="greeting" class="greeting-text">Bonjour Rophyr !</div> <!-- Texte de salutation -->
-            <div id="heure" class="clock"></div> <!-- L'élément où l'horloge s'affichera -->
+            <div id="horloge">
+                <div id="greeting" class="greeting-text">Bonjour Rophyr !</div>
+                <div id="heure" class="clock"></div>
+            </div>
             <div id="container">
                 <form id="squareForm">
                     <label for="title">Titre:</label>
