search function added

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </div>
         <div class="second-sidebar">
             <div class="search-bar">
-                <input type="text" placeholder="Rechercher">
+                <input type="text" id="searchInput" placeholder="Rechercher">
             </div>
+            <div id="search-results-container"></div>
         </div>
         <div class="container-wrapper">
             <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter...</button>
