--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div id="horloge">
-            <div id="greeting" class="greeting-text">Bonjour Rophyr !</div>
+            <div id="greeting" class="greeting-text">Bonjour    !</div>
             <div id="heure" class="clock"></div>
         </div>
         <div>
