--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="search-results-container"></div>
         </div>
         <div class="container-wrapper">
-            <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter...</button>
+            <button id="showFormButton" onclick="toggleSquareForm()">+ Ajouter</button>
             <div id="container">
                 <form id="squareForm">
                     <label for="title">Titre:</label>
